fix for donut chart Tooltip flickering

--- a/app/assets/stylesheets/web/Starboy/pages/_planner.scss
+++ b/app/assets/stylesheets/web/Starboy/pages/_planner.scss
@@ -47,6 +47,8 @@
 
 }
 
+svg > g:last-child > g:last-child { pointer-events: none }
+
 .token-val-usd{
   background: #f1f5f8;
   color: #819aa1;
